# standard-logger

./: .gitignore  Justfile  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml
examples/: demo.py
src/standard_logger/: __init__.py  logger.py  logger_internals.py
