[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = "standard_logger"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "loguru>=0.7.3",
    "platformdirs>=4.3.7",
    "rich>=14.0.0",
]

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "hatchling>=1.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/standard_logger"]

[tool.hatch.build.targets.sdist]
only-include = ["/src", "/pyproject.toml", "/README.md"]

[tool.uv]
link-mode = "copy"
